# PlotOpenCv

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ef81c0b  LICENSE.txt  README.md
src/: CMakeLists.txt  PlotOpenCv.cpp  PlotOpenCv.h  PlotOpenCvVersion.h  plotOpenCv.cpp  plotOpenCv.h  plotOpenCvVersion.h  plotOpenCvVersion.h.in
src/Impl/: PlotOpenCvImpl.cpp  PlotOpenCvImpl.h
test/: CMakeLists.txt  main.cpp
